# corpus-accu

./: LICENSE  README.md  corpus-accu.asd  package.lisp  utils.lisp
cnn-sentence/: nearest.lua  test.lua  testing.lua  training.lua  training.sh
cnn-sentence/DataHandler/: DataSet.lua  Dictionary.lua
cnn-sentence/Model/: SimpleCNN.lua
cnn-sentence/lua_translator/: CMakeLists.txt  convert_dictionary.cc  dictionary.h
cnn-sentence/wording/: postprocess.py
crawler/: package.lisp
crawler/bilibili/: accu.lisp
crawler/subhd/: accu.lisp
crawler/subtitle-parser/: aux.lisp  srt.lisp
dataset/bilibili/catalog/: animation.lisp  documentary.lisp  entertain.lisp  movie-chinese.lisp  movie-japan.lisp  movie-other.lisp  movie-west.lisp  tv-drama.lisp
subhd/: accu.lisp
subtitle-parser/: ass.lisp  aux.lisp
wording/: postprocess.py
zimuzu/: accu.lisp
